examples/type_system/failing/80_type_adt_constructor_arity_mismatch.flx
// E082: constructor arity mismatch using `type ... = ... | ...` ADT sugar.

type PairI = Pair(Int, Int)

fn bad(x: PairI) -> Int {
    match x {
        Pair(a) -> a,
    }
}

fn main() {
    bad(Pair(1, 2))
}
